<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="AppCompatResource">
    <item android:id="@+id/select" android:title="@string/select" android:icon="@drawable/ic_menu_done_enabled" android:showAsAction="always"/>
    <item android:id="@+id/rename" android:title="@string/rename" android:icon="@drawable/ic_menu_rename" android:showAsAction="ifRoom"/>
    <item android:id="@+id/choose_for_operation" android:title="@string/choose_files_to_copy_or_move" android:icon="@drawable/ic_menu_copy" android:showAsAction="ifRoom"/>
    <item android:id="@+id/delete" android:title="@string/delete" android:icon="@drawable/ic_menu_delete" android:showAsAction="ifRoom" />
    <item android:id="@+id/wipe" android:title="@string/overwrite_and_delete" android:icon="@drawable/ic_menu_wipe" android:showAsAction="ifRoom" />
    <item android:id="@+id/open_as_container" android:title="@string/open_file_as_container" android:icon="@drawable/ic_menu_open_as_container" android:showAsAction="ifRoom" />
    <item android:id="@+id/properties" android:title="@string/properties" android:icon="@drawable/ic_menu_info" android:showAsAction="ifRoom"/>
    <item android:id="@+id/send" android:title="@string/send" android:icon="@drawable/ic_menu_share" android:showAsAction="ifRoom"/>
    <item android:id="@+id/copy_to_temp" android:title="@string/decrypt_to_temp_folder" android:icon="@drawable/ic_menu_decrypt_to_temp"  android:showAsAction="ifRoom"/>
</menu>
