<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="AppCompatResource">
    <item android:id="@+id/progressbar" android:title="@string/loading" android:showAsAction="always" android:actionLayout="@layout/fm_progress_bar" android:orderInCategory="5"/>
    <item android:id="@+id/copy" android:title="@string/copy_here" android:icon="@drawable/ic_menu_paste" android:showAsAction="ifRoom" android:orderInCategory="10"/>
    <item android:id="@+id/move" android:title="@string/move_here" android:icon="@drawable/ic_menu_cut" android:showAsAction="ifRoom" android:orderInCategory="11"/>
    <group android:id="@+id/new_file_group">
        <item android:id="@+id/new_file" android:title="@string/new_file" android:icon="@drawable/ic_menu_new_file" android:showAsAction="ifRoom"  android:orderInCategory="12"/>
        <item android:id="@+id/new_dir" android:title="@string/new_dir" android:icon="@drawable/ic_menu_new_folder" android:showAsAction="ifRoom" android:orderInCategory="13"/>
    </group>
    <item android:id="@+id/select_all" android:title="@string/select_all" android:icon="@drawable/ic_menu_select_all" android:showAsAction="ifRoom"  android:orderInCategory="14"/>
    <item android:id="@+id/sort" android:title="@string/sort" android:icon="@drawable/ic_menu_sort" android:showAsAction="ifRoom"  android:orderInCategory="15"/>
</menu>
