<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      tools:ignore="AppCompatResource">
    <group android:id="@+id/zoomMenuGroup">
        <item android:id="@+id/zoomInMenuItem" android:title="@string/zoom_in" android:icon="@drawable/ic_menu_zoom_in" android:showAsAction="ifRoom" android:orderInCategory="20"/>
        <item android:id="@+id/zoomOutMenuItem" android:title="@string/zoom_out" android:icon="@drawable/ic_menu_zoom_out" android:showAsAction="ifRoom" android:orderInCategory="21"/>
    </group>
    <group android:id="@+id/navMenuGroup">
        <item android:id="@+id/prevMenuItem" android:showAsAction="ifRoom" android:title="@string/previous_image" android:icon="@drawable/ic_menu_previous" android:orderInCategory="22" />
        <item android:id="@+id/nextMenuItem" android:showAsAction="ifRoom" android:title="@string/next_image" android:icon="@drawable/ic_menu_next" android:orderInCategory="23"/>
    </group>
    <group android:id="@+id/rotateMenuGroup">
        <item android:id="@+id/rotateLeftMenuItem" android:title="@string/rotate_left" android:icon="@drawable/ic_menu_rotate_left" android:showAsAction="ifRoom" android:orderInCategory="24"/>
        <item android:id="@+id/rotateRightMenuItem" android:title="@string/rotate_right" android:icon="@drawable/ic_menu_rotate_right" android:showAsAction="ifRoom" android:orderInCategory="25"/>
    </group>
    <item android:id="@+id/toggleAutoZoom" android:title="@string/toggle_auto_zoom"  android:orderInCategory="26"/>
    <item android:id="@+id/fullScreenModeMenuItem" android:title="@string/enable_full_screen_mode" android:checkable="true" android:showAsAction="ifRoom" android:icon="@drawable/ic_menu_fullscreen"
        tools:ignore="AppCompatResource"  android:orderInCategory="26"/>
</menu>