<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    style="@style/PropertyRow">
	<TextView 
		android:id="@+id/title_edit"
    	android:text="@string/create_new_container_or_add_existing_container"
		style="@style/PropertyTitle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/create_new_container_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/create_new_container"
            style="?attr/propertyButtonStyle"/>
        <Button
            android:id="@+id/add_existing_container_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/add_container"
            style="?attr/propertyButtonStyle"/>
    </LinearLayout>
</LinearLayout>
