<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/eds"
            android:src="@drawable/ic_main" />
        <TextView
            android:id="@+id/labelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/passwordDialogEditText"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" >
                <requestFocus />
            </EditText>
            <ImageButton
                android:id="@+id/toggle_show_pass"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onOkClick"
                android:src="@drawable/ic_show_pass"
                android:contentDescription="@string/toggle_display_password"/>
        </LinearLayout>

        <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"				
                android:layout_marginBottom="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="1dp"                
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <Button
                android:id="@android:id/button1"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:maxLines="1"
                android:onClick="onOkClick"
                android:text="@string/ok" />
            <ImageButton
                android:id="@+id/settings"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onOkClick"
                android:src="@drawable/ic_menu_settings"
                android:contentDescription="@string/settings"/>
    </LinearLayout>

</LinearLayout>